# neotec_dual_sync

./: .gitignore  CHANGELOG.md  CHANGELOG_2_6_0.md  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
fixtures/: role.json
neotec_dual_sync/: api.py  auth.py  commands.py  events.py  hooks.py  install.py  jobs.py  mapping.py  modules.txt  patches.txt  sender.py
neotec_dual_sync/api/: __init__.py  events.py  jobs.py  schema.py  scope.py  services.py
neotec_dual_sync/config/: desktop.py
neotec_dual_sync/doctype/neotec_sync_batch/: neotec_sync_batch.json  neotec_sync_batch.py
neotec_dual_sync/doctype/neotec_sync_field_map/: neotec_sync_field_map.json  neotec_sync_field_map.py
neotec_dual_sync/doctype/neotec_sync_log/: neotec_sync_log.json
neotec_dual_sync/doctype/neotec_sync_rule/: neotec_sync_rule.json
neotec_dual_sync/doctype/neotec_sync_settings/: neotec_sync_settings.json  neotec_sync_settings.py
neotec_dual_sync/neotec_dual_sync/doctype/neotec_sync_api_key/: neotec_sync_api_key.json  neotec_sync_api_key.py
neotec_dual_sync/neotec_dual_sync/doctype/neotec_sync_batch/: neotec_sync_batch.json  neotec_sync_batch.py
neotec_dual_sync/neotec_dual_sync/doctype/neotec_sync_conflict/: neotec_sync_conflict.json  neotec_sync_conflict.py
neotec_dual_sync/neotec_dual_sync/doctype/neotec_sync_dashboard/: neotec_sync_dashboard.json  neotec_sync_dashboard.py
neotec_dual_sync/neotec_dual_sync/doctype/neotec_sync_field_map/: neotec_sync_field_map.json  neotec_sync_field_map.py
neotec_dual_sync/neotec_dual_sync/doctype/neotec_sync_idempotency_log/: neotec_sync_idempotency_log.json  neotec_sync_idempotency_log.py
neotec_dual_sync/patches/v2_5_0/: upgrade_from_v2_4.py
neotec_dual_sync/public/js/: form_integration.js  neotec_sync_batch.js  neotec_sync_conflict.js  neotec_sync_log.js  neotec_sync_settings.js
(+22 files in other folders)
