[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neotec_dual_sync"
version = "2.6.0"
description = "Production-oriented configurable dual instance synchronization for Frappe/ERPNext"
readme = "README.md"
authors = [{name = "Neotec", email = "support@neotec.example"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["neotec_dual_sync*"]

[tool.bench.frappe-dependencies]
frappe = ">=15,<16"
erpnext = ">=15,<16"
